--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,23 @@
 }
 
 :root {
-  --acc-color: #CBB99F;
+  --bg-color: #000b0f;
+  --acc-color: #121C18;
 }
 
 body {
+  width: 100vw;
+  height: auto;
+  overflow-x: hidden;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  font-family: "Poppins", sans-serif;
+  background-color: var(--bg-color);
+  color: white;
+}
+
+#root {
   width: 100vw;
   height: 100vh;
   overflow-x: hidden;
@@ -17,14 +30,14 @@ body {
   align-items: center;
   flex-direction: column;
   font-family: "Poppins", sans-serif;
-  background-color: #040700;
+  background-color: var(--bg-color);
   color: white;
 }
 
 header {
   width: 80%;
   height: 10%;
-  position: fixed;
+  position: sticky;
   margin-top: 2%;
   display: flex;
   align-items: center;
@@ -58,10 +71,9 @@ header>div:nth-child(2) {
   justify-content: end;
 }
 
-main {
-  margin-top: 9em;
+section {
   width: 100%;
-  height: 80%;
+  height: auto;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -88,7 +100,7 @@ main {
 
 .menu>div {
   height: 65%;
-  width: 90%;
+  width: 81%;
   display: flex;
   align-items: start;
   flex-direction: column;
@@ -137,4 +149,48 @@ main {
     width: 300px;
     height: 300px;
   }
+}
+
+#landing {
+  min-height: 100%;
+}
+
+#aboutMe {
+  min-height: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+#introduction {
+  width: 80%;
+  height: 20%;
+  display: flex;
+  align-self: center;
+  justify-content: space-between;
+}
+
+#introduction>div {
+  width: 100%;
+  height: 50%;
+  display: flex;
+  align-items: start;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+#formation {
+  background-color: rgb(46, 46, 46);
+  width: 80%;
+  height: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.formationCard {
+  border-radius: 4px;
+  border: 1px solid;
+  border-color: var(--bg-color);
+  padding: 1em;
 }
