--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 
 :root {
   --bg-color: #000b0f;
-  --acc-color: #121C18;
+  --acc-color: #00202e;
 }
 
 body {
@@ -77,6 +77,7 @@ section {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
 
 .menu {
@@ -127,9 +128,9 @@ section {
 }
 
 #avatarContainer {
-  border-radius: 360px;
-  width: 400px;
-  height: 400px;
+  border-radius: 50%;
+  min-width: 18em !important;
+  min-height: 18em !important;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -151,10 +152,6 @@ section {
   }
 }
 
-#landing {
-  min-height: 100%;
-}
-
 #aboutMe {
   min-height: 100%;
   display: flex;
@@ -164,21 +161,43 @@ section {
 
 #introduction {
   width: 80%;
-  height: 20%;
+  height: 80%;
   display: flex;
   align-self: center;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: start;
+  margin-top: 2em;
 }
 
-#introduction>div {
+#introduction>div:nth-child(1) {
   width: 100%;
-  height: 50%;
+  height: 10%;
+  display: flex;
+  align-items: start;
+  flex-direction: column;
+  justify-content: start;
+
+  h3 {
+    font-weight: 400;
+  }
+}
+
+#introduction>div:nth-child(2) {
+  width: 100%;
+  min-height: 20%;
   display: flex;
   align-items: start;
   flex-direction: column;
   justify-content: space-evenly;
+
+  p {
+    font-weight: 200;
+    font-size: 90%;
+
+  }
 }
 
+/* 
 #formation {
   background-color: rgb(46, 46, 46);
   width: 80%;
@@ -194,3 +213,45 @@ section {
   border-color: var(--bg-color);
   padding: 1em;
 }
+
+#project {
+  width: 80%;
+  height: auto;
+  display: flex;
+  align-items: start;
+  justify-content: start;
+  flex-wrap: wrap;
+  gap: 2em;
+}
+
+#projectContainer {
+  width: 100%;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  gap: 5em;
+}
+
+.projectCard {
+  background-size: cover;
+  background-position: center;
+  min-width: 30em;
+  min-height: 18em;
+  display: flex;
+  align-items: end;
+  justify-content: center;
+  color: white;
+  border-radius: 5px;
+}
+
+.projectCard>div {
+  background-color: #000b0f90;
+  width: 100%;
+  height: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  padding-left: 1.5em;
+} */
