--- a/src/index.css
+++ b/src/index.css
@@ -163,7 +163,7 @@ section {
   width: 80%;
   height: 80%;
   display: flex;
-  align-self: center;
+  align-items: center;
   flex-direction: column;
   justify-content: start;
   margin-top: 2em;
@@ -176,7 +176,7 @@ section {
   align-items: start;
   flex-direction: column;
   justify-content: start;
-
+  margin-bottom: 1em;
   h3 {
     font-weight: 400;
   }
