--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,7 @@ header {
   width: 80%;
   height: 10%;
   position: sticky;
-  margin-top: 2%;
+  margin-top: 3em;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -176,7 +176,8 @@ section {
   align-items: start;
   flex-direction: column;
   justify-content: start;
-  margin-bottom: 1em;
+  margin-bottom: 0.5em;
+
   h3 {
     font-weight: 400;
   }
@@ -213,32 +214,43 @@ section {
   border-color: var(--bg-color);
   padding: 1em;
 }
-
+*/
 #project {
-  width: 80%;
-  height: auto;
+  width: 100%;
+  min-height: 40% !important;
   display: flex;
   align-items: start;
+  flex-direction: column;
   justify-content: start;
-  flex-wrap: wrap;
-  gap: 2em;
+  margin-top: 2em;
+
+}
+
+#project>h3 {
+  margin-left: 1em;
 }
 
 #projectContainer {
   width: 100%;
-  height: auto;
+  height: 100%;
+  overflow-x: auto;
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
-  gap: 5em;
+  justify-content: start;
+  flex-wrap: nowrap;
+  gap: 2em;
+  /* background-color: red; */
+}
+
+#projectContainer>div:nth-child(1) {
+  margin-left: 1em;
 }
 
 .projectCard {
   background-size: cover;
   background-position: center;
-  min-width: 30em;
-  min-height: 18em;
+  min-width: 80%;
+  min-height: 80%;
   display: flex;
   align-items: end;
   justify-content: center;
@@ -254,4 +266,4 @@ section {
   align-items: center;
   justify-content: start;
   padding-left: 1.5em;
-} */
+}
