--- a/src/index.css
+++ b/src/index.css
@@ -10,18 +10,7 @@
   --acc-color: #00202e;
 }
 
-body {
-  width: 100vw;
-  height: auto;
-  overflow-x: hidden;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  font-family: "Poppins", sans-serif;
-  background-color: var(--bg-color);
-  color: white;
-}
-
+body,
 #root {
   width: 100vw;
   height: 100vh;
@@ -48,14 +37,6 @@ header {
 header a {
   text-decoration: none;
   color: aliceblue;
-}
-
-header>div:nth-child(1) {
-  width: 20%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: start;
 }
 
 header>div:nth-child(1)>h1 {
@@ -109,22 +90,17 @@ section {
   gap: 5%;
 }
 
-.menu>div {
-  a {
-    font-size: 150%;
-  }
+.menu a {
+  font-size: 150%;
+  color: white;
+  text-decoration: none;
+  padding: 0.5em 0;
 }
 
 .menu.open {
   display: flex;
   opacity: 1;
   transform: translateY(0);
-}
-
-.menu a {
-  color: white;
-  text-decoration: none;
-  padding: 0.5em 0;
 }
 
 #avatarContainer {
@@ -194,27 +170,9 @@ section {
   p {
     font-weight: 200;
     font-size: 90%;
-
   }
 }
 
-/* 
-#formation {
-  background-color: rgb(46, 46, 46);
-  width: 80%;
-  height: 10%;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-}
-
-.formationCard {
-  border-radius: 4px;
-  border: 1px solid;
-  border-color: var(--bg-color);
-  padding: 1em;
-}
-*/
 #project {
   width: 100%;
   min-height: 40% !important;
@@ -223,7 +181,6 @@ section {
   flex-direction: column;
   justify-content: start;
   margin-top: 2em;
-
 }
 
 #project>h3 {
@@ -239,7 +196,6 @@ section {
   justify-content: start;
   flex-wrap: nowrap;
   gap: 2em;
-  /* background-color: red; */
 }
 
 #projectContainer>div:nth-child(1) {
@@ -255,15 +211,36 @@ section {
   align-items: end;
   justify-content: center;
   color: white;
-  border-radius: 5px;
+  border-radius: 16px;
+  position: relative;
 }
 
-.projectCard>div {
-  background-color: #000b0f90;
-  width: 100%;
-  height: 3rem;
+.projectCard::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 11, 15, 0.55);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(10.5px);
+  -webkit-backdrop-filter: blur(10.5px);
+  border: 0.5px solid rgb(46, 46, 46, 0.50);
+}
+
+.projectCard .content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   display: flex;
-  align-items: center;
-  justify-content: start;
-  padding-left: 1.5em;
+  align-items: start;
+  flex-direction: column;
+  padding: 2em;
+  justify-content: center;
+  z-index: 1;
+  gap: 1em;
 }
