--- a/src/index.css
+++ b/src/index.css
@@ -179,7 +179,8 @@ section {
   align-items: start;
   flex-direction: column;
   justify-content: start;
-  margin-top: 2em;
+  margin-top: 4em;
+  margin-bottom: 4em;
 }
 
 #project>h3 {
@@ -247,17 +248,6 @@ section {
 
 .projectTechIcon {
   height: 60%;
-  animation: rotation 10s infinite linear;
-}
-
-@keyframes rotation {
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
 }
 
 .projectCardYear {
@@ -274,3 +264,12 @@ section {
     font-size: 160%;
   }
 }
+
+.techIcons{
+  width: 100%;
+  height: 2em;
+  display: flex;
+  align-items: center;
+  gap: 2em;
+}
+
