--- a/src/index.css
+++ b/src/index.css
@@ -174,19 +174,19 @@ section {
 }
 
 #project {
-  width: 80%;
-  min-height: 40% !important;
+  width: 100%;
+  min-height: 45% !important;
   display: flex;
-  align-items: start;
+  align-items: center;
   flex-direction: column;
-  justify-content: start;
+  justify-content: center;
   margin-top: 4em;
   margin-bottom: 4em;
   overflow-y: hidden;
 }
 
 #project>h3 {
-  margin-left: 1em;
+  width: 80%;
 }
 
 #projectContainer {
@@ -195,11 +195,13 @@ section {
   overflow-x: auto;
   display: flex;
   align-items: center;
-  justify-content: start;
+  justify-content: space-evenly;
   flex-wrap: nowrap;
   gap: 2em;
   overflow-y: hidden;
 }
+
+
 
 #projectContainer>div:nth-child(1) {
   margin-left: 1em;
@@ -209,7 +211,9 @@ section {
   background-size: cover;
   background-position: center;
   min-width: 25em;
-  min-height: 10em;
+  max-width: 30em;
+  min-height: 19em;
+  max-height: 19em;
   display: flex;
   align-items: end;
   justify-content: center;
@@ -229,9 +233,9 @@ section {
   background: rgba(0, 0, 0, 0.55);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(10.5px);
+  backdrop-filter: blur(8.5px);
   -webkit-backdrop-filter: blur(10.5px);
-  border: 0.5px solid rgb(46, 46, 46, 0.50);
+  border: 0.5px solid rgba(41, 41, 41, 0.5);
 }
 
 .projectCard .content {
@@ -247,6 +251,13 @@ section {
   justify-content: center;
   z-index: 1;
   gap: 1em;
+  /* text-wrap: pretty; */
+  overflow: hidden;
+
+}
+
+.cardDescription{
+  font-size: 90%;
 }
 
 .projectTechIcon {
